// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.proto.chromeos.device;

option go_package = "infra/unifiedfleet/api/v1/proto/chromeos/device;ufspb";

import "infra/unifiedfleet/api/v1/proto/chromeos/device/platform_id.proto";
import "infra/unifiedfleet/api/v1/proto/chromeos/device/model_id.proto";
import "infra/unifiedfleet/api/v1/proto/chromeos/device/brand_id.proto";
import "infra/unifiedfleet/api/v1/proto/chromeos/device/variant_id.proto";

// These are the globally unique identifiers that determine what set of
// configuration data is used for a given device.
message ConfigId {

  // Required. 
  PlatformId platform_id = 1;

  // Required.
  ModelId model_id = 2;

  // Required.
  VariantId variant_id = 3;

  // Required.
  BrandId brand_id = 4;
}
